--- a/SlimGreen/app/src/main/res/layout/activity_login.xml
+++ b/SlimGreen/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/all_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
@@ -11,6 +12,7 @@
 
     <android.support.constraint.ConstraintLayout
 
+        android:id="@+id/rlDatosUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0.8"
